--- a/public/index.html
+++ b/public/index.html
@@ -6,4 +6,15 @@
 	<body>
 		<p>Welcome to the chat app</p>
 	</body>
+	<script src="/socket.io/socket.io.js"></script>
+	<script>
+		var socket = io();
+
+		socket.on('connect',()=>{
+			console.log('Connected to server');
+		});
+		socket.on('disconnect',()=>{
+			console.log('Disconnected to server');
+		});		
+	</script>
 </html>
